webpack builds, cards populate with players on end setup

--- a/index.HTML
+++ b/index.HTML
@@ -15,16 +15,16 @@
                 <button type="submit">Add Player</button>
                 <div id="player-list">
                     <h3>Players</h3>
-                    <ul id="player-list">
-                        <!-- for player in players list name -->
-                    </ul>
+                    <ul id="player-list"></ul>
                 </div>
             </form>
             <button id="end-game-setup">End setup</button>
         </div>
-        <button id="start-game">Start Game</button>
-        <div id="game-output"></div>
-        <script src="src/game.js"></script>
-        <script src="src/run.js"></script>
+        <div id="current-leader"></div>
+        <div id="game-output">
+            <div id="hand"></div>
+        </div>
+
+        <script src="dist/bundle.js"></script>
     </body>
 </html>
