--- a/index.HTML
+++ b/index.HTML
@@ -14,15 +14,16 @@
                 />
                 <button type="submit">Add Player</button>
                 <div id="player-list">
-                    <h3>Players</h3>
                     <ul id="player-list"></ul>
                 </div>
             </form>
             <button id="end-game-setup">End setup</button>
+            <button id="reset-game">Reset Game</button>
         </div>
         <div id="current-leader"></div>
         <div id="game-output">
             <div id="hand"></div>
+            <div id="attribute-selection"></div>
         </div>
 
         <script src="dist/bundle.js"></script>
