improved round winner logic

--- a/index.HTML
+++ b/index.HTML
@@ -20,12 +20,13 @@
             <button id="end-game-setup">End setup</button>
             <button id="reset-game">Reset Game</button>
         </div>
-        <div id="current-leader"></div>
-        <div id="game-output">
-            <div id="hand"></div>
-            <div id="attribute-selection"></div>
+        <div id="game-play-area">
+            <div id="current-leader"></div>
+            <div id="game-output">
+                <div id="hand"></div>
+                <div id="attribute-selection"></div>
+            </div>
         </div>
-
         <script src="dist/bundle.js"></script>
     </body>
 </html>
