--- a/index.HTML
+++ b/index.HTML
@@ -18,13 +18,15 @@
                 </div>
             </form>
             <button id="end-game-setup">End setup</button>
-            <button id="reset-game">Reset Game</button>
         </div>
         <div id="game-play-area">
+            <button id="reset-game">Reset Game</button>
             <div id="current-leader"></div>
             <div id="game-output">
                 <div id="hand"></div>
                 <div id="attribute-selection"></div>
+                <div id="attribute-buttons"></div>
+                <div id="game-results"></div>
             </div>
         </div>
         <script src="dist/bundle.js"></script>
