basic run script updated in line with game logic

--- a/index.HTML
+++ b/index.HTML
@@ -26,6 +26,7 @@
                 <div id="hand"></div>
                 <div id="attribute-selection"></div>
                 <div id="attribute-buttons"></div>
+                <div id="turn-status"></div>
                 <div id="game-results"></div>
             </div>
         </div>
