webpack config and debug

--- a/index.HTML
+++ b/index.HTML
@@ -2,7 +2,8 @@
 
 <html lang="en">
     <head>
-        <title>Game</title>
+        <title>Languages Top Trumps</title>
+        <link rel="icon" href="/favicon.ico" />
     </head>
     <body>
         <div class="div" id="game-setup">
@@ -21,14 +22,14 @@
         </div>
         <div id="game-play-area">
             <button id="reset-game">Reset Game</button>
-            <div id="current-leader"></div>
+            <div id="player-status"></div>
             <div id="game-output">
                 <div id="hand"></div>
                 <div id="attribute-selection"></div>
                 <div id="attribute-buttons"></div>
                 <div id="turn-status"></div>
-                <div id="game-results"></div>
             </div>
+            <div id="game-results"></div>
         </div>
         <script src="dist/bundle.js"></script>
     </body>
