fixed webpack bugs

--- a/index.HTML
+++ b/index.HTML
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <title>Languages Top Trumps</title>
-        <link rel="icon" href="/favicon.ico" />
+        <link rel="icon" href="favicon.ico" />
     </head>
     <body>
         <div class="div" id="game-setup">
@@ -18,7 +18,7 @@
                     <ul id="player-list"></ul>
                 </div>
             </form>
-            <button id="end-game-setup">End setup</button>
+            <button type="button" id="end-game-setup">End setup</button>
         </div>
         <div id="game-play-area">
             <button id="reset-game">Reset Game</button>
@@ -31,6 +31,5 @@
             </div>
             <div id="game-results"></div>
         </div>
-        <script src="dist/bundle.js"></script>
     </body>
 </html>
