--- a/src/index.HTML
+++ b/src/index.HTML
@@ -4,6 +4,7 @@
     <head>
         <title>Languages Top Trumps</title>
         <link rel="icon" href="favicon.ico" />
+        <link rel="stylesheet" type="text/css" href="./styles.css" />
     </head>
     <body>
         <div class="div" id="game-setup">
@@ -18,7 +19,9 @@
                     <ul id="player-list"></ul>
                 </div>
             </form>
-            <button type="button" id="end-game-setup">End setup</button>
+            <button type="button" id="end-game-setup" disabled="true">
+                End setup
+            </button>
         </div>
         <div id="game-play-area">
             <button id="reset-game">Reset Game</button>
