font size changes with content

--- a/src/index.HTML
+++ b/src/index.HTML
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>Languages Top Trumps</title>
+        <title>Top Trumps: Languages</title>
         <link rel="icon" href="favicon.ico" />
         <link rel="stylesheet" type="text/css" href="./styles.css" />
     </head>
@@ -19,9 +19,7 @@
                     <ul id="player-list"></ul>
                 </div>
             </form>
-            <button type="button" id="end-game-setup" disabled="true">
-                End setup
-            </button>
+            <button type="button" id="end-game-setup">End setup</button>
         </div>
         <div id="game-play-area">
             <button id="reset-game">Reset Game</button>
