styling setup element

--- a/src/index.HTML
+++ b/src/index.HTML
@@ -7,6 +7,11 @@
     </head>
     <body>
         <div class="div" id="game-setup">
+            <div class="welcome-div">
+                <h1>Top Trumps: Languages</h1>
+                <p>Welcome to Top Trumps</p>
+            </div>
+            <p>Add two or more players to begin!</p>
             <form id="add-player-form">
                 <input
                     type="text"
@@ -18,7 +23,7 @@
                     <ul id="player-list"></ul>
                 </div>
             </form>
-            <button type="button" id="end-game-setup">End setup</button>
+            <button type="button" id="end-game-setup">GO!</button>
         </div>
         <div id="game-play-area">
             <button id="reset-game">Reset Game</button>
