adding method to show the losing cards

--- a/src/index.HTML
+++ b/src/index.HTML
@@ -28,14 +28,12 @@
         <div id="game-play-area">
             <button id="reset-game">Reset Game</button>
             <div id="player-status"></div>
-            <div id="game-output">
+            <div id="lead-player-output">
                 <div id="hand"></div>
-                <div id="attribute-selection"></div>
-                <div id="attribute-buttons"></div>
                 <div id="turn-status"></div>
             </div>
             <div id="game-results">
-                <div id="loser-cards"></div>
+                <div id="non-leader-cards"></div>
             </div>
         </div>
     </body>
