drop shadow. flex columns formats other cards end

--- a/src/index.HTML
+++ b/src/index.HTML
@@ -26,11 +26,13 @@
             <button type="button" id="end-game-setup">GO!</button>
         </div>
         <div id="game-play-area">
-            <button id="reset-game">Reset Game</button>
-            <div id="player-status"></div>
             <div id="lead-player-output">
                 <div id="hand"></div>
                 <div id="turn-status"></div>
+            </div>
+            <div id="reset-and-player-status-container">
+                <div id="player-status"></div>
+                <button id="reset-game">Reset Game</button>
             </div>
             <div id="game-results">
                 <div id="non-leader-cards"></div>
