folder tree, move html creation all to JS

--- a/src/index.HTML
+++ b/src/index.HTML
@@ -5,38 +5,5 @@
         <title>Top Trumps: Languages</title>
         <link rel="icon" href="favicon.ico" />
     </head>
-    <body>
-        <div class="div" id="game-setup">
-            <div class="welcome-div">
-                <h1>Top Trumps: Languages</h1>
-                <p>Welcome to Top Trumps</p>
-            </div>
-            <p>Add two or more players to begin!</p>
-            <form id="add-player-form">
-                <input
-                    type="text"
-                    id="player-name"
-                    placeholder="Enter player's name"
-                />
-                <button type="submit">Add Player</button>
-                <div id="player-list">
-                    <ul id="player-list"></ul>
-                </div>
-            </form>
-            <button type="button" id="end-game-setup">GO!</button>
-        </div>
-        <div id="game-play-area">
-            <div id="lead-player-output">
-                <div id="hand"></div>
-                <div id="turn-status"></div>
-            </div>
-            <div id="reset-and-player-status-container">
-                <div id="player-status"></div>
-                <button id="reset-game">Reset Game</button>
-            </div>
-            <div id="game-results">
-                <div id="non-leader-cards"></div>
-            </div>
-        </div>
-    </body>
+    <body></body>
 </html>
